Implement review findings by @redcatbear